Add more facts