@@ -108,7 +108,7 @@ public class PokerEngine extends Engine {
     public String getGameState() {
         try {
             MemorySegment result = (MemorySegment) getGameStateHandle.invoke();
-            return result.getUtf8String(0);
+            return result.getString(0);
         } catch (Throwable t) {
             throw new RuntimeException("Failed to get game state", t);
         }
@@ -125,7 +125,7 @@ public class PokerEngine extends Engine {
     public String executeAction(int action, int amount) {
         try {
             MemorySegment result = (MemorySegment) executeActionHandle.invoke(action, amount);
-            return result.getUtf8String(0);
+            return result.getString(0);
         } catch (Throwable t) {
             throw new RuntimeException("Failed to execute action", t);
         }
